# wwwpy

./: .gitignore  LICENSE  README.md  mypy.ini  pip-compile-dev.sh  pip-compile-pypi.sh  pip-compile-test.sh  pip-compile.sh  pip-install-all.py  pip-install-all.sh  pip-intall-all.sh  pypi_helper.py  pypi_inc_minor.py  pypi_upload.py  pypi_upload2.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-pypi.txt  requirements-test.txt  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
.run/: Python tests in tests & mypy.run.xml  Python tests in tests.run.xml  mypy.run.xml
docs/: component.md  introduction.md  rpc.md
play/: quickstart.py  remote.py  test_nothing.py
preprocessing/shoelace/: convert.py  shoelace.json  vscode.html-custom-data.json  web-types.json
src/wwwpy/: __init__.py  bootstrap.py  exceptions.py  http.py  http_request.py  http_response.py  http_sansio.py  resource_iterator.py  resources.py  response.py  routes.py  rpc.py  unasync.py  webserver.py  websocket.py
src/wwwpy/asgi/: asgi-compliant.md  echo_handler.py  index.html  main_daphne.py  main_granian.py  main_tornado.py  main_uvicorn.py  tornado_asgi_handler.py
src/wwwpy/common/: __init__.py  collectionlib.py  event_observer.py  files.py  implib.py  indent.py  iterlib.py  modlib.py  property_monitor.py  python_code.py  reloader.py  state.py  throttler.py  tree.py  typing.py
src/wwwpy/common/designer/: __init__.py  abstraction.md  class_path.py  code_edit.py  code_info.py  code_path.py  code_strings.py  cst.py  el_standard.py  element_editor.py  element_library.py  element_path.py  html_edit.py  html_locator.py  html_parser.py  html_parser_mod.py  log_emit.py  new_component.py  shoelace.json  shoelace.py  sl_icons.txt  source_edit.py  source_finder.py  source_strings.py  target_path.py
src/wwwpy/common/quickstart/: __init__.py
src/wwwpy/common/rpc/: ast_parser.py  custom_loader.py  func_registry.py  invoker.py  serialization.py  serializer.py
src/wwwpy/remote/: __init__.py  browser_main.py  component.py  fetch.py  files.py  hotkey.py  main.py  root_path.py  rpc.py  shoelace.py  sse.py  websocket.py  widget.py
src/wwwpy/remote/designer/: dev_mode.py  drop_zone.py  element_path.py  global_interceptor.py  helpers.py  log_redirect.py  quickstart.py  rpc.py  source_finder.py  target_path.py
src/wwwpy/remote/widgets/: filesystem_tree_widget.py
src/wwwpy/server/: __init__.py  __main__.py  configure.py  custom_str.py  fetch.py  find_port.py  proxy.py  rpc.py  sse.py  tcp_port.py  throttler_thread.py  time.py  time_test.py  wait_url.py  watcher.py
src/wwwpy/server/designer/: dev_mode.py  rpc.py
src/wwwpy/server/filesystem_sync/: README.md  __init__.py  any_observer.py  debouncer.py  debouncer_thread.py  event.py  event_apply.py  event_invert_apply.py  event_revert.py  sync_delta.py  sync_delta2.py  sync_zip.py  watchdog_debouncer.py  watchdog_local.py
src/wwwpy/server/pytest/: __init__.py  playwright.py  playwrightlib.py  pytest_plugin.py  remote_test_main.py  xvirt_impl.py
src/wwwpy/server/pytestlib/: remote_conftest.py  remote_test_main.py  xvirt_impl.py
src/wwwpy/webservers/: available_webservers.py  fastapi.py  flask.py  python_embedded.py  tornado.py
tests/: __init__.py  available_webservers_test.py  conftest.py  play_playwright.py  playwright.py  remote_conftest.py  remote_test_main.py  test_unsync.py  test_webserver.py  xvirt_impl.py
tests/common/: __init__.py  collectionlib_test.py  event_observer_test.py  files_test.py  iterlib_test.py  modlib_test.py  property_monitor_test.py  python_code_test.py  quickstart_test.py  reload_test.py  state_test.py  steate_machine_manager_test.py  throttler_test.py  throttler_thread_test.py
tests/common/designer/: code_edit_test.py  code_info_test.py  code_path_test.py  code_strings_test.py  component_fixture.py  cst_test.py  element_editor_test.py  element_library_test.py  element_path_test.py  html_edit_test.py  html_locator_test.py  html_parser_test.py  source_edit_test.py  source_info_test.py  source_strings_test.py  target_path_test.py
tests/common/reload/: reload_test.py
tests/common/reload/reload_1/: component.py  reload_1_test_disable.py
tests/common/reload/reload_2/: class_a.py  reload_2_test_disable.py
tests/common/rpc/: support3.py  test_ast_parser.py  test_invoker.py  test_rpc.py  test_serialization.py  test_serializer.py
tests/layer/: LAYERS.md  layer_0_test.py  test_dev_mode.py  test_hot_reload.py  test_layer5_test_pool_change_failure.txt  test_layer_0.py  test_layer_1.py  test_layer_2.py  test_layer_3.py  test_layer_4.py  test_layer_5.py
tests/layer/layer_3_support/convention_c_async/: remote.py
tests/layer/layer_3_support/convention_c_sync/: remote.py
tests/layer/layer_4_support/additional/: remote.py
tests/remote/: README.md  component_test.py  test_in_pyodide.py  test_in_pyodide_bis.py  test_widget.py  xtest_in_pyodide.py  xtest_in_pyodide_bis.py
tests/remote/designer/: code_path_test.py  drop_zone_test.py  element_path_test.py  source_finder_test.py  target_path_test.py
tests/remote/remsub1/: test_sub1.py
tests/server/: cmd_line_args_test.py  dev_mode_test.py  page_fixture.py  tcp_port_test.py  test_sse.py  watcher_test.py
tests/server/designer/: drop_zone_test.py  html_locator_test.py  source_finder_test.py
tests/server/filesystem_sync/: activity_monitor.py  activity_monitor_test.py  any_observer_test.py  debouncer_test.py  event_apply_test.py  event_invert_apply_test.py  event_logger.py  event_revert_test.py  event_test.py  filesystem_fixture.py  fs_compare.py  mutator.py  sync_fixture.py  sync_test.py  time_mock.py  wakeup_recorder.py  watchdog-events.txt  watchdog_debouncer_test.py
tests/server/pytestlib/: xvirt_impl_test.py
tests/server/remote_ui/: drop_zone_test.py  page_fixture.py  searchable_combobox_test.py
tests/server/rpc/: test_invoker.py  test_rpc.py  test_rpc_sync.py
tests/server/startup/: test_dev_mode.py
tests/test_rpc/: support1.py  support2.py  test_rpc.py
(+54 files in other folders)
