# https://packaging.python.org/en/latest/tutorials/packaging-projects/
[project]
name = "wwwpy"
version = "0.1.19"
authors = [{ name = "Simone Giacomelli", email = "simone.giacomelli@gmail.com" }]
dependencies = ["tornado==6.4.1", "watchdog==4.0.1", "webtypy"]
requires-python = ">=3.9"
keywords = ["wwwpy", "wasm", "pyodide", "web", "development", "dom", "html", "javascript"]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]


[project.urls]
Homepage = "https://github.com/www-py/wwwpy"
Issues = "https://github.com/www-py/wwwpy/issues"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"wwwpy" = ["**/*.json", "**/*.txt"]


[project.optional-dependencies]
# libcst==1.3.1 is the version available in pyodide 0.26.1
test = ["tox", "pytest", "playwright", "pytest-playwright", "pytest-xvirt", "libcst==1.3.1"]
dev = ["webtypy", "playwright"]
pypi = ["twine", "build"]
# pip install -e ".[all]" or pip install -e ".[test,dev]"
all = ["foo_package[test,dev,pypy]"]


[project.entry-points.pytest11]
pytest_wwwpy = "wwwpy.server.pytest.pytest_plugin"


# the following should be already the default see: https://setuptools.pypa.io/en/latest/userguide/datafiles.html
# include_package_data = True

[project.scripts]
wwwpy = "wwwpy.server.__main__:main"