[metadata]
name = wwwpy
url = https://github.com/www-py/wwwpy
version = 0.1.3
license = Apache 2.0
license_files = LICENCE
description =
long_description = file: README.md
long_description_content_type = text/markdown
author = Simone Giacomelli
author_email = simone.giacomelli@gmail.com
keywords = wwwpy wasm pyodide web development dom html javascript
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
package_dir =
    =src
packages = find:
zip_safe = False
include_package_data = True

[options.package_data]
* = py.typed, *.pyi

[options.extras_require]
test =
    mypy==1.0.1
    pep8-naming==0.11.1
    pytest==7.1.3
    tox==3.23.0
    playwright
    pytest-playwright
    pytest-xvirt==0.1.10
dev =
    build==0.6.0.post1
    twine==3.4.2
    wheel==0.37.0

[options.packages.find]
where = src
