[metadata]
name = wwwpy
url = https://github.com/www-py/wwwpy
version = 0.1.8
license = Apache 2.0
license_files = LICENCE
description =
long_description = file: README.md
long_description_content_type = text/markdown
author = Simone Giacomelli
author_email = simone.giacomelli@gmail.com
keywords = wwwpy wasm pyodide web development dom html javascript
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
package_dir =
    =src
packages = find:
zip_safe = False
include_package_data = True
python_requires = >=3.8
install_requires =
    tornado==6.4.1

[options.package_data]
* = py.typed, *.pyi

[options.extras_require]
test =
    mypy==1.0.1
    pep8-naming==0.11.1
    pytest==7.2.2
    tox==3.23.0
    playwright
    pytest-playwright
    pytest-xvirt
#pydantic==1.10.7 # supported by pyodide
dev =
    watchdog
    webtypy
pypi =
    twine

[options.packages.find]
where = src

[options.entry_points]
pytest11 =
    wwwpy = wwwpy.server.pytest.pytest_plugin